--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
+    "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
